Updated project files with new changes

--- a/M-606projectbatu.ipynb
+++ b/M-606projectbatu.ipynb
@@ -32,7 +32,7 @@
     "\n",
     "## **Project Repository on GitHub**\n",
     "**Access the full project repository on GitHub:**\n",
-    "- [GitHub Repository]\n",
+    "- [GitHub Repository][https://github.com/BatuhanOzturk0/Renewable_Energy_Productions.git]\n",
     "\n",
     "\n"
    ]
